# teensy-core

./: CMakeLists.txt  README.md  mk20dx128-compat.h  mk20dx128.c  mk20dx128.h  pins_teensy.c  readme.md
include/: core_pins.h  mk20dx128-compat.h  mk20dx128.h
